# nanoe5.c

./: .gitignore  MANIFEST.in  Makefile  README.md  bench_variants.py  convert.py  e5.c  e5.h  e5.py  pyproject.toml  sae_eval.py  sae_train.py  server.c  setup.py  stress_test.py  test_parity.py  test_variants.py
.github/workflows/: wheels.yml
nanoe5/: __init__.py  _core.py  server.py
